# django-agrinet

./: .env  .gitignore  Inserts_para_las_pruebas.sql  Query_Informe.sql  README.md  pyproject.toml
.scannerwork/: report-task.txt
Pool de imágenes para pruebas/Verduras/: brocoli_2.jfif
apps/location/: models.py
apps/producer_application/: apps.py  forms.py  models.py  urls.py  views.py
apps/producer_application/migrations/: 0001_initial.py  0002_remove_applicationform_producer_type.py  0002_rename_productor_formulario.py  0003_applicationform_application_date.py  0004_alter_applicationform_application_date.py
apps/producer_application/static/: application_detail.css  communes.js  estilo.css  validaciones.js  validaciones.mjs
apps/producer_application/templates/: application_detail.html  application_status.html  form.html  producer_application.html
apps/products/: admin.py  forms.py  models.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  0002_initial.py  0002_remove_productname_category.py  0003_alter_product_picture.py  0004_alter_product_picture.py
apps/products/templates/: create_product.html  my_products.html  update_product.html
apps/sales/: admin.py  models.py  urls.py  views.py
apps/sales/migrations/: 0003_alter_sales_payment_alter_sales_receipt_and_more.py  0003_sales_total.py  0004_sales_is_complete.py
apps/users/: admin.py  forms.py  models.py  urls.py  views.py
core/: settings.py  urls.py
static/js/: cart.js  constants.js
static/styles/: colores.css  nav.css
templates/: base_template.html
(+64 files in other folders)
