[tool.poetry]
name = "gestion-agil"
version = "0.1.0"
description = ""
authors = ["ctomrp <cristian.rico.palma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.9"
pillow = "^10.2.0"
geopy = "^2.4.1"
weasyprint = "^60.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
